image size fix and contact-form spacing issues

--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -140,7 +140,6 @@ p {
     }
 }
 .card{
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -150,7 +149,7 @@ p {
     color: rgb(0, 0, 0);
     letter-spacing: 3px;
     margin-bottom: 0.5rem;
-    font-size: 30px;
+    font-size: 2rem;
     font-weight: bolder;
     
 }
@@ -164,12 +163,11 @@ p {
 
 .card p {
     color: rgb(255, 255, 255);
-    font-size: 15px;
+    font-size: 1rem;
     width: 70%;
     margin-bottom: 1rem;
     font-weight: 400;
     letter-spacing: 3px;
-
 }
 
 
@@ -184,18 +182,20 @@ p {
 
 .contact-left {
     width: 40%;
+    height: 100%;
     /* background-color: red; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* justify-content: last baseline; */
     justify-content: center;
     gap: 5%;
-    
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+    /* padding-top: 2%; */
 }
 
 .contact-left h2 {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 
@@ -277,38 +277,44 @@ textarea {
 
 .contact-right-r {
     display: flex;
-    width: 100%;
-    justify-content: space-evenly;
+    justify-content: left;
     align-items: center;
-    /* background-color: antiquewhite; */
+    flex: 1;
 }
 
 .cards {
-    width: 50%;
-    height: 90%;
-    /* background-color: antiquewhite; */
-   
-    padding: 0 3%;
-   
+    width: 48%;
+    height: 95%;
+    padding: 0 1%;
+    overflow: hidden;
+}
+
+#ashu-card {
+    padding-left: 3%;
+}
+
+#mihir-card {
+    padding-right: 3%;
 }
 
 .info-container {
     width: 100%;
     height: 70%;
-    /* background-color: yellow; */
     display: flex;
     align-items: center;
 }
 
 .info-img{
-    width: 60%;
+    width: 80%;
     height: 100%;
     /* background-color: aqua; */
+    overflow: hidden;
 }
 
 .info-img img {
     width: 90%;
-    height: 100%;
+    height: 95%;
+    object-fit: contain;
 }
 
 .info-icon {
@@ -324,5 +330,4 @@ textarea {
     height: 30%;
     width: 100%;
 }
-
 
